# earthquakes

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
doc/: earthquake_assets_specifications.md  earthquake_classes.cpp  earthquake_main_window_p1.cpp  earthquake_map_missing_methods.cpp  earthquake_map_widget_p1.txt  earthquake_map_widget_p2.txt  earthquake_spatial_utils.cpp
src/: earthquake_api_client.cpp  earthquake_api_client.hpp  earthquake_api_client.txt  earthquake_application.cpp  earthquake_application.hpp  earthquake_data.cpp  earthquake_data.hpp  earthquake_database.cpp  earthquake_database.hpp  earthquake_main_window.cpp  earthquake_main_window.hpp  earthquake_map_widget.cpp  earthquake_map_widget.hpp  earthquake_map_widget.txt  geojson_parser.cpp  geojson_parser.hpp  main.cpp  notification_manager.cpp  notification_manager.hpp  spatial_utils.cpp  spatial_utils.hpp  testgeocoordinateparsing.cpp
